--- a/app/src/main/res/layout/fragment_detail_book.xml
+++ b/app/src/main/res/layout/fragment_detail_book.xml
@@ -13,8 +13,13 @@
         android:clickable="true"
         android:layout_marginTop="20dp"
         android:layout_height="match_parent">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progress_bar"/>
         <TextView
             android:id="@+id/title"
+            android:layout_below="@id/progress_bar"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
@@ -110,7 +115,7 @@
             android:layout_below="@id/image"
             android:layout_height="wrap_content"
             android:id="@+id/note"
-            android:hint="You can leave a not here" />
+            android:hint="You can leave a note here" />
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_below="@id/note"
